--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,6 +22,8 @@ body{
     align-items: center;
     aspect-ratio: 1 / 1;
     color: green;
+    font-size: 20px;
+    font-weight: bold;
 }
 .bg-yellow{
     background-color: yellow;
