--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -25,6 +25,6 @@ body{
     font-size: 20px;
     font-weight: bold;
 }
-.bg-yellow{
-    background-color: yellow;
+.bg-skyblue{
+    background-color: skyblue;
 }
