--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -9,10 +9,12 @@ body{
 .container{
     width: 1000px;
     margin: 100px auto;
+    text-align: center;
 }
 .row{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 2rem;
 }
 .square{
     width: calc(100% / 10);
@@ -27,4 +29,18 @@ body{
 }
 .bg-skyblue{
     background-color: skyblue;
+}
+#produce{
+    border: 2px solid white;
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-color: rgb(20, 90, 200);
+}
+#produce:hover{
+    background-color: rgb(10, 35, 100);
+    border: 2px solid red;
 }
