--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -26,6 +26,7 @@ body{
     color: green;
     font-size: 20px;
     font-weight: bold;
+    border-radius: 1rem;
 }
 .bg-skyblue{
     background-color: skyblue;
