--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -42,9 +42,25 @@ body{
     border-radius: 1rem;
     font-size: 1.5rem;
     font-weight: bold;
-    background-color: rgb(20, 90, 200);
+    background-color: rgb(20, 20, 200);
+    margin-right: 1rem;
 }
 #produce:hover{
-    background-color: rgb(10, 35, 100);
+    background-color: rgb(10, 10, 100);
     border: 2px solid red;
+}
+#reset{
+    border: 2px solid white;
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-color: rgb(200, 20, 20);
+    margin-left: 1rem;
+}
+#reset:hover{
+    background-color: rgb(100, 10, 10);
+    border: 2px solid blue;
 }
