--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,7 +18,7 @@ body{
 }
 .square{
     width: calc(100% / 10);
-    border: 2px solid red;
+    border: 2px solid green;
     display: flex;
     justify-content: center;
     align-items: center;
